--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -76,6 +76,11 @@
         "timelord": "Таймлорд"
     },
 
+    "node_log_table": {
+        "module": "Модуль",
+        "message": "Сообщение"
+    },
+
     "node_peers": {
         "version": "Версия",
         "received": "Загрузка",
