--- a/www/web-gui/public/locales/template.json
+++ b/www/web-gui/public/locales/template.json
@@ -45,7 +45,7 @@
     "node_info": {
         "synced": "Synced",
         "supply": "Supply",
-        "no_addresss": "No. Addresss"
+        "no_addresses": "No. Addresses"
     },
     "node_log": {
         "terminal": "Terminal",
