--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -214,7 +214,9 @@
 
         "theme": "Тема",
         "light": "Светлая",
-        "dark": "Темная"        
+        "dark": "Темная",
+
+        "opencl_device": "Устройство OpenCL"
     },
 
     "wallet_settings": {
