--- a/www/web-gui/public/locales/template.json
+++ b/www/web-gui/public/locales/template.json
@@ -213,5 +213,12 @@
     "login": {
         "password_label": "Password (see PASSWD file)",
         "login": "Login"
+    },
+    "account_history_form": {
+        "any": "Any",
+        "spend": "Spend",
+        "receive": "Receive",
+        "reward": "Reward",
+        "tx_fee": "TX Fee"
     }
 }
