account-offers filter

--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -31,6 +31,8 @@
         "failed_with": "Ошибка",
         "deployed_as": "Развёрнут как",
 
+        "any": "Все",
+
         "link": "Ссылка"
     },
 
