--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -289,7 +289,8 @@
         "they_offer": "Предлагают",
         "they_ask": "Запрашивают",
         "anything": "Всё",
-        "offers": "Офферы"
+        "offers": "Офферы",
+        "history": "История"
     },
 
     "market_offers": {
