--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -118,6 +118,8 @@
         "plots": "Плоты",
         "offer": "Офферы",
         "history": "История",
+        "liquidity": "Ликвидность",
+        "info": "Информация",
         "details": "Подробности"
     },
 
