--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -34,7 +34,8 @@
         "any": "Все",
 
         "link": "Ссылка",
-        "owner": "Владелец"
+        "owner": "Владелец",
+        "manage": "Управлять"
     },
 
     "main_menu": {
