--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -149,7 +149,13 @@
 
     "account_plots": {
         "size": "Объём",
-        "new_plot": "Новый плот"
+        "new_plot": "Новый плот",
+
+        "from": "с",
+        "to": "на",
+
+        "deposit_warning": "Только 90% суммы депозита будет возвращено при снятии средств, остальное сжигается в качестве комиссии.",
+        "withdraw_warning": "Возвращается только 90% суммы, остальное сжигается в качестве комиссии."
     },
 
     "account_offers": {
