--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -10,8 +10,11 @@
         "height": "Высота",
         "blocks": "Блоки",
         "balance": "Баланс",
+        "name": "Название",
         "token": "Токен",
+        "currency": "Валюта",
         "symbol": "Символ",
+        "price": "Цена",
         "hash": "Хэш",
         "reward": "Награда",
         "amount": "Сумма",
@@ -133,7 +136,6 @@
         "destination": "Получатель",
         "destination_address": "Адрес получателя",
         "address_input": "Ввод адреса",
-        "currency": "Валюта",
         "send": "Отправить"
     },
 
@@ -161,7 +163,6 @@
     "account_offers": {
         "offering": "Предложено",
         "received": "Получено",
-        "price": "Цена",
         "status": "Статус",
         "actions": "Действия",
         "revoke": "Отозвать",
@@ -279,7 +280,6 @@
 
     "wallet_settings": {
         "token_whitelist": "Белый список токенов",
-        "name": "Название",
         "token_address": "Адрес токена",
         "add_token": "Добавить токен"
     },
@@ -326,8 +326,6 @@
     },
 
     "market_offers": {
-        "price": "Цена",
-
         "accept_offer": "Принять оффер",
         "wallet_ballance": "Баланс кошелька",
         "you_send": "Вы отправляете",
@@ -365,6 +363,21 @@
 
     "farmer_plot_dirs": {
         "path": "Путь"
+    },
+
+    "swap": {
+        "pool_balance": "Баланс пула",
+        "volume": "Объем",
+        "24h": "24ч",
+        "7d": "7 дней",
+
+        "trade": "Обмен",
+        "history": "История",
+        "my_liquidity": "Моя ликвидность",
+        "pool_state": "Состояние пула",
+
+        "fee_level": "Уровень комиссии",
+        "user_total": "Всего"
     },
 
     "$vuetify": {
