--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -43,7 +43,9 @@
         "owner": "Владелец",
         "manage": "Управлять",
         "harvester": "Комбайн",
-        "deposit": "Вклад"
+        "deposit": "Вклад",
+
+        "user": "Пользователь"
     },
 
     "main_menu": {
@@ -376,7 +378,11 @@
         "my_liquidity": "Моя ликвидность",
         "pool_state": "Состояние пула",
 
+        "my_balance": "Мой баланс",
+        "fees_earned": "Заработанная комиссия",
         "fee_level": "Уровень комиссии",
+        "unlock_height": "Высота разблокировки",
+
         "user_total": "Всего"
     },
 
