--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -373,7 +373,7 @@
         "24h": "24ч",
         "7d": "7 дней",
 
-        "trade": "Обмен",
+        "trade": "Торговля",
         "history": "История",
         "my_liquidity": "Моя ликвидность",
         "pool_state": "Состояние пула",
@@ -393,7 +393,16 @@
         "switch_fee": "Изменить уровень комиссии",
         "add_liquidity": "Добавить ликвидность",
         "remove_iquidity": "Забрать ликвидность",
-        "remove_all": "Забрать всё"
+        "remove_all": "Забрать всё",
+
+        "wallet_ballance": "Баланс кошелька",
+        "buy_amount": "Сумма покупки",
+        "sell_amount": "Сумма продажи",
+        "trade_fee_estimated": "Комиссия (предполагаемая)",
+        "you_receive_estimated": "Вы получите (предположительно)",
+
+        "sell": "Продать",
+        "buy": "Kупить"
     },
 
     "$vuetify": {
