--- a/www/web-gui/public/locales/ru.json
+++ b/www/web-gui/public/locales/ru.json
@@ -373,7 +373,7 @@
         "24h": "24ч",
         "7d": "7 дней",
 
-        "trade": "Торговля",
+        "trade": "Обмен",
         "history": "История",
         "my_liquidity": "Моя ликвидность",
         "pool_state": "Состояние пула",
