--- a/test/TODO.txt
+++ b/test/TODO.txt
@@ -3,3 +3,7 @@ Mainnet
 - Public RPC
 - Multisig
 - Test remote calls again
+- Disable fork detection
+- Harvester num_threads GUI config
+- MMX script docu
+- unsafe_add() / unsafe_sub()
