--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -8,8 +8,7 @@ Mainnet
 - Website
 - Linux packages
 - Double check msg hashes again
-- GUI config for DB / network path
 - New project wallet
 - Check remaining in-source TODOs
 - Test mainnet-rc changes
-- Max farm size estimate mmx_postool
+- Harvester latency graphs
